welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:7: error: ';' expected but 'while' found.
    }while (crossing()!=true)
     ^Poucet:9: error: 'while' expected but 'if' found.
  if (cookie<=2){
  ^Poucet:14: error: '(' expected but '}' found.
}
^